syntax = "proto3";

package syntoks_feed;
option go_package = "./proto";

import "validate/validate.proto";
import "api/models.proto";
import "google/protobuf/any.proto";

message CreateReactionRequest {

}

message CreateReactionResponse {

}

message GetReationRequest {

}

message GetReationResponse {

}

message UpdateReactionRequest {

}

message UpdateReactionResponse {

}

message DeleteReactionRequest {

}

message DeleteReactionResponse {

}
